--- a/itests/pom.xml
+++ b/itests/pom.xml
@@ -38,8 +38,12 @@
     <dependencies>
         <dependency>
             <groupId>org.nessus.didcomm</groupId>
-            <artifactId>nessus-didcomm-core</artifactId>
+            <artifactId>nessus-didcomm-agent</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>network.idu.acapy</groupId>
+            <artifactId>aries-client-python</artifactId>
         </dependency>
 
         <!-- Test -->
@@ -56,6 +60,12 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.nessus.didcomm</groupId>
+            <artifactId>nessus-didcomm-agent</artifactId>
+            <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
