--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     networks:
       - von-network
     ports:
-      - ${WEB_SERVER_HOST_PORT:-9000}:8000
+      - ${INDY_WEB_SERVER_PORT:-9000}:8000
     volumes:
       - webserver-cli:/home/indy/.indy-cli
       - webserver-ledger:/home/indy/ledger
@@ -175,15 +175,9 @@ services:
         --admin 0.0.0.0 ${ACAPY_ADMIN_PORT:-8031}
         --admin-api-key ${ACAPY_ADMIN_API_KEY:-adminkey}
         --jwt-secret ${ACAPY_MULTITENANT_JWT_SECRET:-jwtsecret}
-        --multitenant
-        --multitenant-admin
         --seed 000000000000000000000000Trustee1
-        --wallet-storage-type default
-        --wallet-key trusteewkey
-        --wallet-name trustee
-        --wallet-type indy
-        --storage-type indy
-        --recreate-wallet
+        --multitenant-admin
+        --multitenant
         --auto-provision
         --auto-ping-connection
         --auto-accept-requests
