--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -30,24 +30,43 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <name>Nessus DIDComm :: ITests</name>
+    <name>Nessus DIDComm :: Agent</name>
 
-    <artifactId>nessus-didcomm-itests</artifactId>
+    <artifactId>nessus-didcomm-agent</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
-            <groupId>org.nessus.didcomm</groupId>
-            <artifactId>nessus-didcomm-agent</artifactId>
-            <version>${project.version}</version>
+            <groupId>com.google.crypto.tink</groupId>
+            <artifactId>tink</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>id.walt</groupId>
+            <artifactId>waltid-ssi-kit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging-jvm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>network.idu.acapy</groupId>
+            <artifactId>aries-client-python</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>network.idu.acapy</groupId>
-            <artifactId>aries-client-python</artifactId>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-undertow</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.didcommx</groupId>
+            <artifactId>didcomm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
 
         <!-- Test -->
@@ -64,12 +83,6 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit5</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.nessus.didcomm</groupId>
-            <artifactId>nessus-didcomm-agent</artifactId>
-            <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
