[#12] Build latest waltid-ssikit and publish to maven local

--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>tink</artifactId>
         </dependency>
         <dependency>
+            <groupId>id.walt.servicematrix</groupId>
+            <artifactId>waltid-servicematrix</artifactId>
+        </dependency>
+        <dependency>
             <groupId>id.walt</groupId>
             <artifactId>waltid-ssi-kit</artifactId>
         </dependency>
