[#15] Add support for secure/general key storage

--- a/agent/src/test/resources/service-matrix.properties
+++ b/agent/src/test/resources/service-matrix.properties
@@ -1,3 +1,4 @@
+# id.walt.services.crypto.CryptoService=org.nessus.didcomm.crypto.NessusCryptoService
 id.walt.services.crypto.CryptoService=id.walt.services.crypto.SunCryptoService
 id.walt.services.hkvstore.HKVStoreService=id.walt.services.hkvstore.InMemoryHKVStore
 id.walt.services.keystore.KeyStoreService=id.walt.services.keystore.InMemoryKeyStoreService
