--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -37,6 +37,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github.terl</groupId>
             <artifactId>lazysodium-java</artifactId>
         </dependency>
