--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -181,6 +181,7 @@ services:
         --auto-ping-connection
         --emit-new-didcomm-mime-type
         --emit-new-didcomm-prefix
+        --recreate-wallet 
         --log-level info
     depends_on:
       - node1
