--- a/itests/pom.xml
+++ b/itests/pom.xml
@@ -70,12 +70,11 @@
             <artifactId>kotlin-test-junit5</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.nessus.didcomm</groupId>
-            <artifactId>nessus-didcomm-agent</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+        </plugins>
+    </build>
 
 </project>
