Refactor to have a MessageExchange / Connection

--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -81,6 +81,10 @@
             <artifactId>didcomm</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
