--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <version.kotlin>1.7.20</version.kotlin>
+        <version.kotlin>1.8.0</version.kotlin>
 
         <!-- Other versions -->
         <version.acapy.client>0.7.33</version.acapy.client>
@@ -19,9 +19,10 @@
         <version.fasterxml.jackson>2.14.1</version.fasterxml.jackson>
         <version.google.crypto.tink>1.7.0</version.google.crypto.tink>
         <version.hyperledger.indy>1.16.0</version.hyperledger.indy>
+        <version.kotlin.logging>3.0.4</version.kotlin.logging>
+        <version.kotlinx.coroutines>1.6.4</version.kotlinx.coroutines>
         <version.lazysodium>5.1.2</version.lazysodium>
         <version.nimbus.jose>9.28</version.nimbus.jose>
-        <version.kotlin.logging>3.0.4</version.kotlin.logging>
         <version.waltid.servicematrix>1.1.2</version.waltid.servicematrix>
         <version.waltid.ssikit>1.13.0-SNAPSHOT4</version.waltid.ssikit>
         <version.junit>5.9.1</version.junit>
@@ -148,6 +149,11 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-stdlib</artifactId>
                 <version>${version.kotlin}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlinx</groupId>
+                <artifactId>kotlinx-coroutines-core</artifactId>
+                <version>${version.kotlinx.coroutines}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
