--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <version.kotlinx.coroutines>1.6.4</version.kotlinx.coroutines>
         <version.lazysodium>5.1.2</version.lazysodium>
         <version.nimbus.jose>9.28</version.nimbus.jose>
+        <version.picocli>4.7.1</version.picocli>
         <version.waltid.servicematrix>1.1.2</version.waltid.servicematrix>
         <version.waltid.ssikit>1.13.0-SNAPSHOT4</version.waltid.ssikit>
         <version.junit>5.9.1</version.junit>
@@ -33,6 +34,8 @@
             Plugin versions
             mvn versions:display-plugin-updates
         -->
+        <version-maven-assembly-plugin>3.4.2</version-maven-assembly-plugin>
+        <version-maven-jar-plugin>3.3.0</version-maven-jar-plugin>
         <version-maven-surefire-plugin>2.22.2</version-maven-surefire-plugin>
         <version-license-maven-plugin>2.0.0</version-license-maven-plugin>
 
@@ -46,6 +49,7 @@
 
     <modules>
         <module>agent</module>
+        <module>cli</module>
         <module>itests</module>
     </modules>
 
@@ -105,6 +109,11 @@
                 <groupId>id.walt.servicematrix</groupId>
                 <artifactId>waltid-servicematrix</artifactId>
                 <version>${version.waltid.servicematrix}</version>
+            </dependency>
+            <dependency>
+                <groupId>info.picocli</groupId>
+                <artifactId>picocli</artifactId>
+                <version>${version.picocli}</version>
             </dependency>
             <dependency>
                 <groupId>io.github.microutils</groupId>
@@ -181,6 +190,16 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>${version-maven-assembly-plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${version-maven-jar-plugin}</version>
+                </plugin>
+                <plugin>
                     <groupId>org.jetbrains.kotlin</groupId>
                     <artifactId>kotlin-maven-plugin</artifactId>
                     <version>${version.kotlin}</version>
@@ -228,6 +247,7 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
