--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>Nessus DIDComm</name>
-
-    <artifactId>nessus-didcomm</artifactId>
     <groupId>org.nessus.didcomm</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>nessus-didcomm</artifactId>
     <packaging>pom</packaging>
+
+    <version>0.23.2-SNAPSHOT</version>
+
+    <name>Nessus DIDComm</name>
+    <description>Digital Identity and Verifiable Credentials based on DIDComm V2</description>
+    <url>https://github.com/tdiesler/nessus-didcomm</url>
+
+    <scm>
+        <connection>scm:git:https://github.com/tdiesler/nessus-didcomm</connection>
+        <developerConnection>scm:git:git@github.com:tdiesler/nessus-didcomm</developerConnection>
+        <url>https://github.com/tdiesler/nessus-didcomm</url>
+        <tag>0.23.2</tag>
+    </scm>
 
     <properties>
         <version.kotlin>1.8.0</version.kotlin>
@@ -37,6 +47,8 @@
         <version-maven-assembly-plugin>3.4.2</version-maven-assembly-plugin>
         <version-maven-exec-plugin>3.1.0</version-maven-exec-plugin>
         <version-maven-jar-plugin>3.3.0</version-maven-jar-plugin>
+        <version-maven-release-plugin>3.0.0-M7</version-maven-release-plugin>
+        <version-maven-source-plugin>3.2.1</version-maven-source-plugin>
         <version-maven-surefire-plugin>2.22.2</version-maven-surefire-plugin>
         <version-license-maven-plugin>2.0.0</version-license-maven-plugin>
 
@@ -223,6 +235,21 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>${version-maven-release-plugin}</version>
+                    <configuration>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
+                        <tagNameFormat>@{project.version}</tagNameFormat>
+                        <arguments>-DskipTests</arguments>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>${version-maven-source-plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${version-maven-surefire-plugin}</version>
                 </plugin>
@@ -304,5 +331,51 @@
             <url>https://maven.walt.id/repository/waltid-ssi-kit/</url>
         </repository>
     </repositories>
+
+    <!-- Licenses -->
+    <licenses>
+        <license>
+            <name>apache_v2</name>
+            <url>http://repository.jboss.org/licenses/apache-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <!-- Developers -->
+    <developers>
+        <developer>
+            <name>Nessus DIDComm Committers</name>
+        </developer>
+    </developers>
+
+    <!-- Distribution Management -->
+    <distributionManagement>
+        <repository>
+            <id>jboss-releases-repository</id>
+            <name>JBoss Releases Repository</name>
+            <url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2</url>
+        </repository>
+    </distributionManagement>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
