--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -27,7 +27,7 @@
 	<parent>
         <groupId>org.nessus.didcomm</groupId>
         <artifactId>nessus-didcomm</artifactId>
-        <version>0.23.2</version>
+        <version>0.23.3-SNAPSHOT</version>
     </parent>
 
     <name>Nessus DIDComm :: Agent</name>
